gettext-macros/tests/ui/dgettext/expected_comma_and_in_args_too.stderr
error: expected `,`
 --> tests/ui/dgettext/expected_comma_and_in_args_too.rs:4:34
  |
4 |     dgettext!("domainname", "{}" 1 2);
  |                                  ^

error: expected `,`
 --> tests/ui/dgettext/expected_comma_and_in_args_too.rs:4:36
  |
4 |     dgettext!("domainname", "{}" 1 2);
  |                                    ^
